--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 html,
 body {
-    font-family: Arial;
+    font-family: "MessinaSansWeb",Helvetica,sans-serif;
 }
 
 a {
@@ -81,4 +81,37 @@ li {
 
 .pagination .swiper-active-switch {
     background: #fe5e52;
+}
+
+@font-face {
+    font-family: 'MessinaSansWeb';
+    src: url(../fonts/MessinaSansWeb-Light.eot);
+    src: url(../fonts/MessinaSansWeb-Light.eot?#iefix) format("embedded-opentype") , url(../fonts/MessinaSansWeb-Light.woff2) format("woff2") , url(../fonts/MessinaSansWeb-Light.woff) format("woff");
+    font-weight: 300;
+    font-style: normal;
+    font-stretch: normal;
+    font-display: swap;
+    unicode-range: U+000d-FB04
+}
+
+@font-face {
+    font-family: 'MessinaSansWeb';
+    src: url(../fonts/MessinaSansWeb-Regular.eot);
+    src: url(../fonts/MessinaSansWeb-Regular.eot?#iefix) format("embedded-opentype") , url(../fonts/MessinaSansWeb-Regular.woff2) format("woff2") , url(../fonts/MessinaSansWeb-Regular.woff) format("woff");
+    font-weight: 400;
+    font-style: normal;
+    font-stretch: normal;
+    font-display: swap;
+    unicode-range: U+000d-FB04
+}
+
+@font-face {
+    font-family: 'MessinaSansWeb';
+    src: url(../fonts/MessinaSansWeb-Bold.eot);
+    src: url(../fonts/MessinaSansWeb-Bold.eot?#iefix) format("embedded-opentype") , url(../fonts/MessinaSansWeb-Bold.woff2) format("woff2") , url(../fonts/MessinaSansWeb-Bold.woff) format("woff");
+    font-weight: 700;
+    font-style: normal;
+    font-stretch: normal;
+    font-display: swap;
+    unicode-range: U+000d-FB04
 }
